--- a/cmr-exchange/ous-plugin/serverless-configs/aws-functions.yml
+++ b/cmr-exchange/ous-plugin/serverless-configs/aws-functions.yml
@@ -1,30 +1,7 @@
 #
 # API Endpoints
 #
-estimateSize:
-  handler: cmr.sizing.app.handler.estimate_size
-  timeout: ${env:LAMBDA_TIMEOUT}
-  warmup:
-    concurrency: ${env:WARM_LAMBDA_COUNT}  
-  events:
-    - http:
-        method: get
-        path: /service-bridge/size-estimate/collection/{concept-id}
-    - http:
-        method: post
-        path: /service-bridge/size-estimate/collection/{concept-id}
-
-streamSizeEstimate:
-  handler: cmr.sizing.app.handler.stream_estimate_size
-  timeout: ${env:LAMBDA_TIMEOUT}
-  warmup:
-    concurrency: ${env:WARM_LAMBDA_COUNT}   
-  events:
-    - http:
-        method: get
-        path: /service-bridge/size-estimate/streaming-collection/{concept-id}
-
-batchGenerate:
+ousBatchGenerate:
   handler: cmr.ous.app.handler.collection.batch_generate
   timeout: ${env:LAMBDA_TIMEOUT}
   warmup:
@@ -34,7 +11,7 @@ batchGenerate:
         method: post
         path: service-bridge/ous/collection
 
-generateUrls:
+ousGenerateUrls:
   handler: cmr.ous.app.handler.collection.generate_urls
   timeout: ${env:LAMBDA_TIMEOUT}
   warmup:
@@ -47,7 +24,7 @@ generateUrls:
         method: post
         path: service-bridge/ous/collection/{concept-id}
 
-streamCollectionUrls:
+ousStreamCollectionUrls:
   handler: cmr.ous.app.handler.collection.stream_urls
   timeout: ${env:LAMBDA_TIMEOUT}
   warmup:
@@ -56,16 +33,6 @@ streamCollectionUrls:
     - http:
         method: get
         path: /service-bridge/ous/streaming-collection/{concept-id}
-
-bridgeServices:
-  handler: cmr.opendap.app.handler.collection.bridge_services
-  timeout: ${env:LAMBDA_TIMEOUT}
-  warmup:
-    concurrency: ${env:WARM_LAMBDA_COUNT}
-  events:
-    - http:
-        method: get
-        path: /service-bridge/crossover/collection/{concept-id}
 
 health:
   handler: cmr.opendap.app.handler.core.health
@@ -142,23 +109,10 @@ evictAll:
         method: delete
         path: /service-bridge/cache/concept
 
-ping:
-  handler: cmr.opendap.app.handler.core.ping
-  timeout: ${env:LAMBDA_TIMEOUT}
-  warmup:
-    concurrency: ${env:WARM_LAMBDA_COUNT}
-  events:
-    - http:
-        method: get
-        path: /service-bridge/ping
-    - http:
-        method: post
-        path: /service-bridge/ping
-
 #
 # Documentation Endpoints
 #
-docs:
+serivceBridgeDocs:
   handler: cmr.http.kit.app.handler.dynamic_page
   timeout: ${env:LAMBDA_TIMEOUT}
   warmup:
@@ -171,7 +125,7 @@ docs:
         method: get
         path: /service-bridge
 
-docs:
+serviceBridgeRobots:
   handler: cmr.http.kit.app.handler.permanent_redirect
   timeout: ${env:LAMBDA_TIMEOUT}
   warmup:
