Draft mock index file & read json

--- a/graph-db/serverless.yml
+++ b/graph-db/serverless.yml
@@ -47,6 +47,10 @@ functions:
               - CollectionIndexingQueue
               - Arn
 
+  indexGeneric:
+    timeout: 20
+    handler: serverless/src/indexGeneric/handler.default
+
 resources:
   Resources:
     CollectionIndexingQueue:
