CMR-8278 added helper for acls and functions for querying generic docs

--- a/graph-db/serverless.yml
+++ b/graph-db/serverless.yml
@@ -51,6 +51,10 @@ functions:
     timeout: 20
     handler: serverless/src/indexGeneric/handler.default
 
+  indexACL:
+    timeout: 20
+    handler: serverless/src/indexACL/handler.default
+
 resources:
   Resources:
     CollectionIndexingQueue:
