CMR-8278 split lambda functions added edges with permissions

--- a/graph-db/serverless.yml
+++ b/graph-db/serverless.yml
@@ -54,6 +54,10 @@ functions:
   indexACL:
     timeout: 20
     handler: serverless/src/indexACL/handler.default
+    
+  indexQueries:
+    timeout: 20
+    handler: serverless/src/indexQueries/handler.default
 
 resources:
   Resources:
