CMR-8361: add ability to ingest variables into graph-db through generic document pipeline, also add ability to parse generic metadata fields that are arrays, also add ability to bootstrap generics, also add ability to define edge properties in index file

--- a/graph-db/serverless.yml
+++ b/graph-db/serverless.yml
@@ -54,10 +54,14 @@ functions:
   indexACL:
     timeout: 20
     handler: serverless/src/indexACL/handler.default
-    
+
   indexQueries:
     timeout: 20
     handler: serverless/src/indexQueries/handler.default
+
+  bootstrapGenerics:
+    timeout: 900
+    handler: serverless/src/bootstrapGenerics/handler.default
 
 resources:
   Resources:
