amend draft as per sls docs - gives NonExistentQueue error

--- a/graph-db/package.json
+++ b/graph-db/package.json
@@ -13,7 +13,8 @@
     "deploy": "./node_modules/.bin/sls deploy --config serverless.yml",
     "prestart": "npm run start:queue",
     "start:queue": "docker-compose up -d",
-    "stop:queue": "docker-compose down"
+    "stop:queue": "docker-compose down",
+    "start": "serverless offline start"
   },
   "maintainers": [
     {
